<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>littlebot_gui_plugin</name>
  <version>0.0.0</version>
  <description>
    A GUI for the LittleBot robot.
  </description>
  <license>GNU General Public License</license>
  <maintainer email="nestor-dp@hotmail.com">Nestor Neto</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>qtbase5-dev</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>